# ePrintSummarizer

./: .gitignore  README.md  app.py  autorun.sh  cli.py  config.example.yaml  pyproject.toml  requirements.txt  scheduler.py
reports/: eprint_2026.html  eprint_2026.md
src/eprint_summary/: __init__.py  config_manager.py  emailer.py  fetcher.py  keyword_matcher.py  models.py  report.py  summarizer.py  utils.py
